# tauri-kensho

./: README.md  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: EmitMessage.tsx  FileOpen.tsx  Greet.tsx  Layout.tsx  SysInfo.tsx
src/components/elms/: AppBar.tsx  AppBarSpacer.tsx  Avatar.tsx  Box.tsx  Button.tsx  Card.tsx  CardContent.tsx  CardHeader.tsx  CardMedia.tsx  Container.tsx  Grid.tsx  Link.tsx  OutboundLink.tsx  TextField.tsx  Typography.tsx
src/components/templates/: _card.tsx  _elm.tsx
